--- a/kids_boys.html
+++ b/kids_boys.html
@@ -151,7 +151,7 @@
                                                         Decor</a></li>
                                                 <li><a href="lifestyle.html" target="_blank"
                                                         title="lifestyle">Lifestyle</a></li>
-                                                <li><a href="stationery.html" target="_blank">Stationery</a></li>
+                                                <li><a href="stationery.html" target="_blank" target="stationery">Stationery</a></li>
                                                 <li><a href="makeup.html" target="_blank" title="makeup">Makeup</a></li>
 
                                                 <li><a href="#contact" title="contact_us">Contact Us</a>
@@ -419,8 +419,59 @@
                         <div class="features_items">
                             <!--features_items-->
                             <h2 class="title text-center">Best Ratings</h2>
+                            <div class="row">
+                                <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
+
+                                    <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07TSCJF98&asins=B07TSCJF98&linkId=be22169177e796d3bebc227a7bbb45ba&show_border=true&link_opens_in_new_window=true"></iframe>
+                                </div>
+                                <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
+                                    <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07MGY2QK5&asins=B07MGY2QK5&linkId=c1dfe5e03c6d2681cf50b7e47b225004&show_border=true&link_opens_in_new_window=true"></iframe>
+                                </div>
+                                <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
+                                    <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07TVDDHG2&asins=B07TVDDHG2&linkId=b400838ff86458c8046de37ac8d6f545&show_border=true&link_opens_in_new_window=true"></iframe>
+                                </div>
+                                <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
+                                    <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07TVGTX2F&asins=B07TVGTX2F&linkId=18c7e1271555d89a23bec88871d1535a&show_border=true&link_opens_in_new_window=true"></iframe>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
+
+                                    <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07RQSVQ1V&asins=B07RQSVQ1V&linkId=9290b758179d1e3c91e340a7ae983d67&show_border=true&link_opens_in_new_window=true"></iframe>
+                                </div>
+                                <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
+                                    <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07MG5ZKYW&asins=B07MG5ZKYW&linkId=d1b814815a5f24507d43d8cd05d49dbe&show_border=true&link_opens_in_new_window=true"></iframe>
+                                </div>
+                                <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
+                                    <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B089STY4D8&asins=B089STY4D8&linkId=d4989e4d3d3238e9b21053396b8da85a&show_border=true&link_opens_in_new_window=true"></iframe>
+                                </div>
+                                <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
+                                    <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07PCQGNGH&asins=B07PCQGNGH&linkId=c942b118a65dd5ff58fdbcb4c3c6295b&show_border=true&link_opens_in_new_window=true"></iframe>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
+                                    <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0"
+                                        scrolling="no" frameborder="0"
+                                        src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07P6M7KP8&asins=B07P6M7KP8&linkId=6f65d12e591ef264ed1c0fd874d22374&show_border=true&link_opens_in_new_window=true"></iframe>
+                                </div>
+                                <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
+                                    <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0"
+                                        scrolling="no" frameborder="0"
+                                        src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07H34PP8X&asins=B07H34PP8X&linkId=990d0ef032d381777cf3c40a90485e28&show_border=true&link_opens_in_new_window=true"></iframe>
+                                </div>
+                                <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
+                                    <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0"
+                                        scrolling="no" frameborder="0"
+                                        src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B08B5HY8FQ&asins=B08B5HY8FQ&linkId=0f9ab5ecb83a7dd57ecb047074410370&show_border=true&link_opens_in_new_window=true"></iframe>
+                                </div>
+                                <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
+                                    <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B085Q4CQN2&asins=B085Q4CQN2&linkId=c601eb0de78699d38a1ebbc2a88568b0&show_border=true&link_opens_in_new_window=true"></iframe>
+                                </div>
 
 
+
+                            </div>
                             <div class="row">
                                 <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
 
