--- a/sports_fitness.html
+++ b/sports_fitness.html
@@ -399,7 +399,39 @@
                         <!--features_items-->
                         <h2 class="title text-center">Best Ratings</h2>
 
+                        <div class="row">
+                            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
 
+                                <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B085BQ45VD&asins=B085BQ45VD&linkId=dd5f42d8ad9b5e03936ab45baac203b7&show_border=true&link_opens_in_new_window=true"></iframe>
+                            </div>
+                            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
+                                <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B08FRLTX2Z&asins=B08FRLTX2Z&linkId=6d0218420792a7d6b809cf906f7fa591&show_border=true&link_opens_in_new_window=true"></iframe>
+                            </div>
+                            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
+                                <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B01C1JUP16&asins=B01C1JUP16&linkId=00dbbbd080cff016501b71e181767b28&show_border=true&link_opens_in_new_window=true"></iframe>
+                            </div>
+                            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
+                                <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07TKYQY82&asins=B07TKYQY82&linkId=106934f0c0d60187a7b088dda33b28b8&show_border=true&link_opens_in_new_window=true"></iframe>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
+
+                                <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07TVCHWMY&asins=B07TVCHWMY&linkId=59afea1d7e4dd022c8596fcf98e506fb&show_border=true&link_opens_in_new_window=true"></iframe>
+                            </div>
+                            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
+                                <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B01FN7X7KE&asins=B01FN7X7KE&linkId=33f2428e91e39256f71aa5a26f22799d&show_border=true&link_opens_in_new_window=true"></iframe>
+                            </div>
+                            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
+                                <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07F1NVDZ2&asins=B07F1NVDZ2&linkId=f5c502db92c45048e9c09857c58cfca1&show_border=true&link_opens_in_new_window=true"></iframe>
+                            </div>
+                            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
+                                <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B079LD81KC&asins=B079LD81KC&linkId=78056ff86808680c6e2baa7df6372652&show_border=true&link_opens_in_new_window=true"></iframe>
+                            </div>
+
+
+
+                        </div>
                         <div class="row">
                             <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
 
